Align Forms Content with corrected color palette

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,13 @@
 
 :root {
   --primary-bg-color: #212529; /* global scope */
+  --secondary-bg-color: #1C1F22; /* 50% Opacity */
+  --secondary-bg-color-opacity-90: #373B3E; /* 90% Opacity */
+  --secondary-bg-color-opacity-80: #2C3034; /* 80% Opacity */
   --primary-font-color: #F8F9FA;
+
+  --primary-white-color: #F8F9FA;
+  --secondary-white-color: #E9ECEF;
 }
 
 html {
@@ -61,7 +67,7 @@ main {
     .about-us-img {
 
       img {
-        background-color: #49505780;
+        background-color: var(--secondary-bg-color-opacity-90);
         transform: translate(0, -120px);
         justify-content: center;
         align-items: center;
@@ -186,7 +192,7 @@ footer {
   row-gap: 2.4rem;
   padding: 4rem 1rem 2rem 1rem;
 
-  background-color: #343A40;
+  background-color: var(--secondary-bg-color);
 
   .contact-info {
     text-align: center;
@@ -203,23 +209,88 @@ footer {
     }
   }
 
-  form {
-    display: flex;
-    flex-direction: column;
+  .contact-form {
     width: 380px;
+    padding: 1rem;
+    color: var(--primary-white-color);
 
-    label {
-      margin-bottom: 0.5rem;
+    form {
+      display: grid;
+      grid-template-columns: 1fr;
+      color: var(--primary-white-color);
+      
+      .form-group {
+        border-bottom: var(--primary-white-color) solid 2px;
+        margin: 1.5rem 0;
+        padding: 0 0 1.5rem 0;
+        
+        input[type=text] {
+          margin-left: 1rem;
+          padding: 0.5rem 0.3rem;
+          background-color: var(--secondary-bg-color);
+          border: none;
+          border-radius: 5px;
+          color: inherit;
+        }
+
+        input[type=text]:hover, textarea:hover, input[type=text]:focus, textarea:focus {
+          background-color: var(--secondary-bg-color-opacity-80);
+        }
+
+        input[type=text]:focus {
+          outline: none;
+        }
+        
+        textarea {
+          width: 100%;
+          height: 7rem;
+          border-radius: 5px;
+          padding: 0.5rem 1rem;
+          border: none;
+          background-color: var(--secondary-bg-color);
+          color: var(--primary-white-color);
+          resize: none;
+          outline: none;
+        }
+        
+        label[for=name], label[for=email], label[for=message] {
+          font-size: 1.5rem;
+        }
+
+        label[for=message] {
+          margin-bottom: 1rem;
+        }
+      }
+
+      .form-g1 {
+        grid-row: 1;
+        grid-column: 1;
+      }
+
+      .form-g2 {
+        grid-row: 2;
+        grid-column: 1;
+      }
+
+      .form-g3 {
+        display: flex;
+        flex-direction: column;
+        grid-row: 3;
+        grid-column: 1;
+
+
+        ::-webkit-scrollbar {
+          display: none;
+        }
+      }
+
     }
+    
 
-    input {
-      margin-bottom: 2rem;
+    img { 
+          max-width: 30rem;
     }
-  }
-
-  img { 
-        max-width: 30rem;
-  }
+  } 
 
  .footer-info {
 
